# workingon

./: .hooky.kdl  Cargo.toml  README.md  diesel.toml  flake.nix  shell.nix
.github/workflows/: build-and-release.yml  conventional-commit.yml  coverage.yml  hooky.yml
migrations/2024-08-08-053400_generate_todos/: down.sql  up.sql
migrations/2025-04-04-201414_add_todos_completion/: down.sql  up.sql
migrations/2026-01-09-073505_adding_due_dates/: down.sql  up.sql
src/: build.rs  cli.rs  constants.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: cli_tests.rs  lib_test.rs  version_tests.rs
