[package]
name = "workingon"
version = "0.0.1"
description = "CLI to track what you're working on"
authors = ["Mark Keller"]
edition = "2021"
license = "LICENSE"
repository = "https://github.com/keller00/workingon"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "string"] }
diesel = { version = "2.2.1", features = ["sqlite"] }
dirs = "5.0.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rstest = "0.21.0"
