[package]
name = "workingon"
version = "1.1.3"
description = "CLI to track what you're working on"
authors = ["Mark Keller"]
edition = "2021"
license = "LICENSE"
repository = "https://github.com/keller00/workingon"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-humanize = "0.2.3"
clap = { version = "4.4.2", features = ["derive", "string"] }
colored = "2.2.0"
comfy-table = { version = "7.2.1", features = ["custom_styling", "tty"] }
diesel = { version = "2.2.1", features = [
  "chrono",
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
dirs = "5.0.1"
sqids = "0.4.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rstest = "0.21.0"
serial_test = "3.2.0"
tempdir = "0.3.7"
